biscuit-terminal/lib/tests/snapshots/layout_matrix__OrderedList__emphasis_bold_italic.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
VIA_RENDER
1. First item
2. Second item
3. Third item
---
VIA_TREE_DIRECT
1. First item
2. Second item
3. Third item
